apps/_dashboard/static/css/no.css
/* ... */
tbody tr:hover {
  background-color:#fbf6d9
}

thead tr {
  background-color:#f1f1f1
}

tbody tr {
  border-bottom:2px solid #f1f1f1
}

td, th {
  padding: 4px 8px;
  text-align: left;
  vertical-align:top
}

thead th {
  vertical-align:bottom
}

@media (min-width: 40rem) {
  table {
    display: table;
    overflow-x: initial;
  }
}

/****************************************************
 buttons
 ****************************************************/

[role="button"], button, input[type='button'], input[type='reset'], input[type='submit'] {
  background-color: #0074d9;
  border-radius: 5px;
  margin-left: 5px;
  margin-right: 5px;
  margin-bottom: 1px;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-size: 1rem;
  font-weight: 300;
  height: 1.8rem;
  line-height: 1.8rem;
  padding: 0 1.0rem;
  text-align: center;
  text-decoration: none;
  white-space: nowrap;
  min-width: 50px;
}

[role="button"]:focus, [role="button"]:hover, button:focus, button:hover, input[type='button']:focus, input[type='button']:hover, input[type='reset']:focus, input[type='reset']:hover, input[type='submit']:focus, input[type='submit']:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

/****************************************************
 forms
 ****************************************************/

input[type='color'], input[type='date'], input[type='datetime'], input[type='time'], input[type='datetime-local'], input[type='email'], input[type='month'], input[type='number'], input[type='password'], input[type='search'], input[type='tel'], input[type='text'], input[type='url'], input[type='week'], input:not([type]), textarea, select {
  background-color: transparent;
  border: 0.1rem solid #d1d1d1;
  border-radius: 5px;
  box-shadow: none;
  box-sizing: inherit;
  font-family: monospace;
  font-size: 1em;
  padding: .5em 1.0em .5em;
  width: 100%;
}

input[type='color']:focus, input[type='date']:focus, input[type='time']:focus, input[type='datetime']:focus, input[type='datetime-local']:focus, input[type='email']:focus, input[type='month']:focus, input[type='number']:focus, input[type='password']:focus, input[type='search']:focus, input[type='tel']:focus, input[type='text']:focus, input[type='url']:focus, input[type='week']:focus, input:not([type]):focus, textarea:focus, select:focus {
  border-color: #0074d9;
  outline: 0;
}

select {
  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 8" width="30"><path fill="%23d1d1d1" d="M0,0l6,8l6-8"/></svg>') center right no-repeat;
}

select[multiple] {
  background: none;
  height: auto;
}

textarea {
  min-height: 6.5rem;
}

fieldset {
  border-width: 0;
  padding: 0;
}

input[type='checkbox'], input[type='radio'] {
  display: inline;
}

[disabled] {
  cursor: default;
  opacity: .5;
}

/****************************************************
 grid and page formatting
 ****************************************************/

body > center > * {
  text-align: initial;
  max-width: 900px;
  margin-left: auto;
  margin-right: auto;
}

.columns {
  display: table;
  width: 100%;
}

.columns .columns {
  margin: 0 -1.5em;
}

@media (min-width:600px) {
  .col,.c25,.c33,.c50,.c66,.c75 {
    padding: 1.5em;
    display: table-cell;
    vertical-align: top;
  }
  .c25 { width: 24.9%; }
  .c33 { width: 33.3%; }
  .c50 { width: 49.9%; }
  .c66 { width: 66.6%; }
  .c75 { width: 74.9%; }
}

@media (max-width:600px) {
  .col,.c25,.c33,.c50,.c66,.c75 {
    padding: 20px;
    display: block;
  }
}

.columns:after {
  content: "";
  clear: both;
  display: table;
}

/****************************************************
 colors
 ****************************************************/

.transparent{background-color:transparent;color:#111}
.default{background-color:#0074d9;color:white}
.success{background-color:#2ecc40;color:white}
.warning{background-color:#ffdc00;color:#111}
.error{background-color:#cc1f00;color:white}
.info{background-color:#f1f1f1;color:#111}
.white{background-color:white;color:#111;padding: 5px;}
.black{background-color:#111;color:white}

/****************************************************
 navigation and nested menu
 ****************************************************/

nav {
  position:relative;
  padding: 0 1.5em;
  display: table;
  width: 100vw;
  height: 40px;
}

nav ul {
  list-style:none;
  position:relative;
  padding:0
}

nav > input[type=checkbox], nav > label {
  display: none;
}

@media (min-width:600px) {
  nav > * {
    display: table-cell;
    vertical-align: middle;
  }
  nav > ul:last-child {
    float:right;
  }
  nav > ul > li {
    padding: 1.5em 0.5em
  }
}

@media (max-width:600px) {
  nav > ul {
    display: table-column;
    vertical-align: middle;
  }
  nav > label {
    position: absolute;
    display: inline-block;
    top: 5px;
    right: 20px;
    font-size: 1.2em;
  }
  nav > a {
    display: inline-block;
    padding-top: 8px !important;
  }
  nav > ul {
    display: block;
  }
  nav > input[type=checkbox]:not(:checked) ~ ul {
    display: none;
  }
  nav > ul > li {
    display: block;
    text-align: center;
    padding: 0.5em 0.2em;
  }
}

nav li:hover {
  background-color: #0074d9
}

nav li:hover > a {
  color: white
}

nav a {
  padding:0 5px;
  text-decoration:none;
  text-align:left;
  color: black;
}

nav.black ul ul a {
  color: black
}

nav.black a, nav.black > label {
  color: white
}

nav li {
  position:relative;
  margin:0;
  padding:0;
  display: inline-block
}

nav ul ul {
  border:1px solid #e1e1e1;
  visibility:hidden;
  opacity:0;
  position:absolute;
  top:90%;
  left:-20px;
  padding:0;
  z-index:1000;
  transition:all 0.2s ease-out;
  list-style-type: none;
  box-shadow:5px 5px 10px #666;
  background-color: white
}

nav ul ul li {
  width: 100%;
}

nav ul ul a {
  padding:10px 15px;
  color:#333;
  font-weight:700;
  font-size:12px;
  line-height:16px;
  display: block;
  color: #111;
}
/* ... */

